--- a/Magento_Customer/templates/account/authentication-popup.phtml
+++ b/Magento_Customer/templates/account/authentication-popup.phtml
@@ -48,9 +48,9 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
             hasCaptchaToken: 0,
             displayErrorMessage: false,
             errorMessages: [],
-            setErrorMessages(messages) {
-                this.errorMessages = [messages];
-                this.displayErrorMessage = !!this.errorMessages.length;
+            setErrorMessages(message) {
+                this.errorMessages = [message];
+                this.displayErrorMessage = true;
             },
             submitForm() {
                 // Do not rename $form, the variable is expected to be declared in the recaptcha output
@@ -108,7 +108,7 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
                 ).then(response => {
                         return response.json()
                     }
-                ).then(data=> {
+                ).then(data => {
                     this.isLoading = false;
                     if (data.errors) {
                         this.setErrorMessages(data.message);
